api/swim_schema/src/schema/tests/derive/validated_form/generic_no_default.stderr
error[E0599]: no method named `as_value` found for struct `S` in the current scope
  --> $DIR/src/schema/tests/derive/validated_form/generic_no_default.rs:29:37
   |
23 |     struct S<F> {
   |     ----------- method `as_value` not found for this
...
29 |     let _s = S { a: 1, f: Invalid }.as_value();
   |                                     ^^^^^^^^ method not found in `S<Invalid>`
